--- a/src/scss/example.scss
+++ b/src/scss/example.scss
@@ -7,5 +7,8 @@
 
 @import 'layout/default';
 
+@import 'blocks/header';
+@import 'blocks/footer';
 @import 'blocks/b-teaser';
 @import 'blocks/b-product';
+@import 'blocks/b-category';
